--- a/action.yml
+++ b/action.yml
@@ -41,6 +41,14 @@ inputs:
         description: 'Boolean flag indicating whether to include or exclude `Pending Approval` section'
         default: 'true'
         required: false
+    tickets_template:
+        description: 'Template for jira tickets changlog'
+        default: ''
+        required: false
+    fix_version:
+        description: 'An existing fix version on jira, tickets will be added this fix version'
+        default: ''
+        requires: false
 outputs:
     changelog_message:
         description: 'Generated changelog entry'
